- Adição de barra de carregamento; - Adição de audios (mouseover, mouseclick, acetar, errar, vencer,   perder, música de fundo e som de tunel); - Adicionado controle de volume para os audios (fx e música); - Barra (negra) superior de créditos adicionados - retirado o anterior.

--- a/www/assets/scss/_BodyElements.scss
+++ b/www/assets/scss/_BodyElements.scss
@@ -5,6 +5,8 @@
   color: $textcor;
   line-height: 1.2em;
   text-align: justify;
+  
+  @include transition(.2s, 0s);
 }
 
 @for $i from 1 through 7 {
