--- a/www/assets/scss/_pagina.scss
+++ b/www/assets/scss/_pagina.scss
@@ -25,30 +25,206 @@ body{
   max-height: 100%;
   max-width: 100%;
 
-  > section{
-    background: #333;
-    background: -moz-radial-gradient(center, ellipse cover, #333 0%, #222 100%);
-    background: -webkit-radial-gradient(center, ellipse cover, #333 0%,#222 100%);
-    background: radial-gradient(ellipse at center, #333 0%,#222 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333', endColorstr='#222',GradientType=1 );
+  overflow: hidden;
 
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    background-position: center center !important;
+  > .preloads{
+    display: none;
+  }
 
-    &,&:before,&:after{
+  > header{
+    &.principal{
       position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 3.5em;
+
+      z-index: 100;
+
+      > div{
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 3.5em;
+
+        padding: .3em;
+        padding-left: 51%;
+        padding-right: .6em;
+
+        background: #222;
+        @include box-shadow(.5em, 0, 2em, #111);
+        text-align: right;
+
+        &,
+        > a,
+        > img{
+          line-height: 2.9em;
+        }
+
+        > a,
+        > img{
+          margin: 0 .5em;
+          display: inline-block;
+          height: 100%;
+
+          > img{
+            height: 100%;
+          }
+        }
+      }
+
+      .logo{
+        display: block;
+        position: absolute;
+        left: -.1em;
+        top: -.5em;
+
+        height: 6em;
+        width: auto;
+
+        > img{
+          height: 100%;
+          width: auto;
+        }
+      }
+    }
+  }
+
+  > div.noratio{
+    left: 0;
+    right: 0;
+    display: none;
+
+    z-index: 100;
+
+    @media screen and (max-width: 359px),
+      screen and (max-height: 359px) {
+      display: block !important;
+      opacity: 1 !important;
+    }
+
+    > table{
+      position: absolute;
       left: 0;
       top: 0;
-      bottom: 0;
+
+      width: 100%;
+      height: 100%;
+
+      td{
+        font-size: 2em;
+        color: #fff;
+        vertical-align: middle;
+        text-align: center;
+      }
+    }
+  }
+
+  > section,
+  > div.noratio{
+    position: fixed;
+    top: 3.5em;
+    bottom: 0;
+  }
+
+  > section{
+    overflow: hidden;
+
+    @media screen and (max-width: 359px),
+      screen and (max-height: 359px) {
+      display: none !important;
+    }
+
+    > aside{
+      position: fixed;
+      top: 30%;
+      height: 40%;
+
+      z-index: 100;
+
+      &.right{
+        right: 4%;
+        width: 2.5%;
+      }
+
+      &.left{
+        left: 4%;
+        width: 2.5%;
+      }
+
+      > table{
+        position: absolute;
+        left: 0;
+        top: 0;
+
+        width: 100%;
+        height: 100%;
+
+        tr{
+          td{
+            text-align: center;
+          }
+        }
+      }
+
+      &.volume{
+        > table{
+          tr{
+            td{
+              > div{
+                cursor: pointer;
+
+                margin: .5em 20%;
+                background: none;
+                height: calc(10% - 1em);
+                min-height: 1em;
+
+                border: .1em solid rgba(0, 240, 255, 1);
+
+                &:hover{
+                  background: red  !important;
+                  border-color: red !important;
+                }
+
+                &.ativo{
+                  background: rgba(0, 240, 255, .5);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &,> div.gameFundo{
+      background: #333;
+      background: -moz-radial-gradient(center, ellipse cover, #333 0%, #222 100%);
+      background: -webkit-radial-gradient(center, ellipse cover, #333 0%,#222 100%);
+      background: radial-gradient(ellipse at center, #333 0%,#222 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333', endColorstr='#222',GradientType=1 );
+
+      background-repeat: no-repeat !important;
+      background-size: cover !important;
+      background-position: center center !important;
+    }
+
+    > div.gameFundo,
+    &,&:before,&:after{
+      left: 0;
       right: 0;
     }
 
-    -webkit-animation: kf-bkMoviment 50s infinite ease;
-    animation: kf-bkMoviment 50s infinite ease;
+    > div.gameFundo,
+    &:before,&:after{
+      position: absolute;
+      bottom: 0;
+      top: 0;
+    }
 
     &:before,&:after{
       content: " ";
+      z-index: 2;
     }
 
     &:after{
@@ -61,13 +237,25 @@ body{
       opacity: .5;
     }
 
+    > div.gameFundo{
+      -webkit-animation: kf-bkMoviment 50s infinite ease;
+      animation: kf-bkMoviment 50s infinite ease;
+      z-index: 1;
+    }
+
     > div{
       z-index: 10;
+
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      right: 0;
 
       &.quadro{
         z-index: 11;
 
-        position: fixed;
+        position: absolute;
         left: 8%;
         top: 8%;
         bottom: 8%;
@@ -122,7 +310,7 @@ body{
           }
 
           &.mp{
-            height: 2.4em;     
+            height: 2.4em;
             min-width: 9.5em;
 
             &:before{
@@ -161,63 +349,6 @@ body{
           right: 0;
           bottom: 0;
 
-          > div.top,
-          > div.bot{
-            position: fixed !important;
-            bottom: 0;
-            left: 0;
-            right: 0;
-
-            height: 5%;
-            max-height: 5%;
-            padding: .2%;
-            //border: 1px solid green;
-
-            .margin{
-              display: block;
-              text-align: center;
-              height: 100%;
-              //border: 1px solid #fff;
-
-              > div,
-              > a{
-                //position: relative !important;
-                display: inline-block;
-
-                margin: 0 .3em;
-                padding: .1em .4em;
-
-                min-height: .7em;
-                min-width: .7em;
-                height: 100%;
-
-                cursor: pointer;
-
-                > img{
-                  display: block;
-                  max-height: 100%;
-                  max-width: 100%;
-                  height: auto;
-                  width: auto;
-                }
-              }
-            }
-          }
-
-          .top{
-            position: fixed;
-            top: 0;
-            bottom: auto;
-
-            > div.margin{
-              opacity: 0;
-
-              > div{
-                margin: 0;
-              }
-            }
-          }
-
           &.splash,
           &.wins,
           &.gameover{
@@ -235,9 +366,24 @@ body{
                 &,>div{
                   > img{
                     max-width: 80% !important;
-                    max-height: 80% !important;
+                    max-height: 60% !important;
 
-                    margin-bottom: 5%;
+                    margin-bottom: 3%;
+                  }
+                }
+              }
+            }
+          }
+
+          &.wins{
+            > table{
+              td{
+                &,>div{
+                  > img{
+                    max-width: 45% !important;
+                    max-height: 25% !important;
+
+                    margin-bottom: 3%;
                   }
                 }
               }
@@ -247,52 +393,17 @@ body{
           &.splash{
             text-align: center;
 
-            > div.top{
-              padding: .45%;
-
-              > div.margin{
-                opacity: 1;
-
-                > div{
-                  margin: 1;
-                }
-              }
-
-              a{
-                border: .1em solid transparent;
-                text-decoration: none;
-                vertical-align: middle;
-                display: inline-block;
-                text-align: center;
-                line-height: 0;
-                overflow: hidden;
-
-                &:hover{
-                  border-color: #2b92db;
-                }
-
-                max-height: 100%;                
-                max-width: 30%;
-                width:30%;
-                height:100%;
-                
-                >img{
-                  display: inline-block;
-                }
-              }
-            }
-
             table{
               td{
                 img.logo{
                   margin-top: -3%;
                   margin-bottom: -1%;
-                  max-height: 80% !important;
+                  max-height: 50% !important;
                   max-width: 40% !important;
                 }
 
                 .menu{
-                  margin: .1em 10%;
+                  margin: .1em 5%;
                   line-height: 3em;
                   text-align: center;
 
@@ -311,148 +422,6 @@ body{
                   max-width: 50%;
                   max-height: 50%;
                 }
-              }
-            }
-          }
-
-          &.hud{
-            opacity: 0;
-            @include transition(.5s, 0s);
-
-            .ico{
-              background-size: auto 100% !important;
-              background-position: center center !important;
-              background-repeat: no-repeat !important;
-
-              position: fixed;
-              cursor: pointer;
-
-              min-width: .5em;
-              min-height: .5em;
-
-              background: rgba(0, 0, 0, .1);
-              border: 0.1em solid transparent;
-
-              &:hover{
-                background: rgba(255, 0, 0, .3);
-                border-color: rgba(255, 0, 0, .7);
-              }
-            }
-
-            .botm,
-            .topm{
-              position: fixed;
-              top: 2.9%;
-              left: 5%;
-              right: 5%;
-
-              height: 5%;
-              max-height: 5%;
-              padding: .15%;
-              //border: 1px solid blue;
-
-              > div.margin{
-                text-align: left;
-                height: 100%;
-                //background: rgba(255, 0, 0, .1);
-
-                > div{
-                  position: absolute;
-                  top: 0;
-                  width: 25%;
-                  height: 100%;
-
-                  line-height: 0;
-                  white-space: nowrap;
-
-                  //background: rgba(45, 237, 217, .1);
-                  //border: 1px solid rgba(45, 237, 217, .3);
-
-                  @include border-radius(.5em);
-
-                  &.p1{
-                    left: 2%;
-                  }
-
-                  &.p2{
-                    right: 2%;
-                    text-align: right;
-                  }
-
-                  > div{
-                    position: relative !important;
-                    display: inline-block;
-
-                    margin: 0 -.1em;
-
-                    min-height: .7em;
-                    min-width: .7em;
-                    height: 100%;
-
-                    > img{
-                      display: block;
-                      max-height: 100%;
-                      max-width: 100%;
-                      height: auto;
-                      width: auto;
-                    }
-                  }
-                }
-              }
-
-              .pontos{
-                padding: 0 .2em;
-
-                .contador{
-                  display: block;
-                  text-align: center;
-                  height: 100%;
-
-                  > div{
-                    position: relative !important;
-                    display: inline-block;
-
-                    margin: 0;
-                    padding: .1em;
-
-                    min-height: .7em;
-                    min-width: .7em;
-                    height: 100%;
-
-                    cursor: pointer;
-
-                    > img{
-                      display: block;
-                      max-height: 100%;
-                      max-width: 100%;
-                      height: auto;
-                      width: auto;
-                    }
-                  }
-                }
-
-                &.p1{
-                  border-bottom: .3em solid red  !important;
-                  border-top: .3em solid red  !important;
-                }
-
-                &.p2{
-                  border-bottom: .3em solid #1adf00 !important;
-                  border-top: .3em solid #1adf00 !important;
-                }
-              }
-            }
-
-            .botm{
-              bottom: 2.9%;
-              top: auto;
-
-              .p1,.p2{
-                @include border-radius(0em, false, false, false, "!important");
-
-                padding: 0 .35em;
-                border-left: .4em solid transparent;
-                border-right: .4em solid transparent;
               }
             }
           }
@@ -513,7 +482,7 @@ body{
 
                 &:before,&:after{
                   content: " " !important;
-                  background-size: cover !important;
+                  background-size: auto 100% !important;
                   background-position: center center !important;
                   background-repeat: no-repeat !important;
 
@@ -631,6 +600,209 @@ body{
           }
         }
       }
+
+      &.hud{
+        opacity: 0;
+        @include transition(.5s, 0s);
+
+        .ico{
+          background-size: auto 100% !important;
+          background-position: center center !important;
+          background-repeat: no-repeat !important;
+
+          position: absolute;
+          cursor: pointer;
+
+          min-width: .5em;
+          min-height: .5em;
+
+          background: rgba(0, 0, 0, .1);
+          border: 0.1em solid transparent;
+
+          &:hover{
+            background: rgba(255, 0, 0, .3);
+            border-color: rgba(255, 0, 0, .7);
+          }
+        }
+
+        > div.top,
+        > div.bot{
+          position: absolute !important;
+          bottom: 0;
+          left: 0;
+          right: 0;
+
+          height: 5%;
+          max-height: 5%;
+          padding: .2%;
+          //border: 1px solid green;
+
+          .margin{
+            display: block;
+            text-align: center;
+            height: 100%;
+            //border: 1px solid #fff;
+
+            > div,
+            > a{
+              //position: relative !important;
+              display: inline-block;
+
+              margin: 0 .3em;
+              padding: .1em .4em;
+
+              min-height: .7em;
+              min-width: 1em;
+              height: 100%;
+
+              cursor: pointer;
+
+              > img{
+                cursor: pointer;
+                display: block;
+                max-width:inherit;
+                height: 90%;
+                width: auto;
+              }
+            }
+          }
+        }
+
+        .top{
+          position: absolute;
+          top: 0;
+          bottom: auto;
+
+          > div.margin{
+            opacity: 0;
+
+            > div{
+              margin: 0;
+            }
+          }
+        }
+
+        .botm,
+        .topm{
+          position: absolute;
+          top: 2.9%;
+          left: 5%;
+          right: 5%;
+
+          height: 5%;
+          max-height: 5%;
+          padding: .15%;
+          //border: 1px solid blue;
+
+          > div.margin{
+            text-align: left;
+            height: 100%;
+            //background: rgba(255, 0, 0, .1);
+
+            > div{
+              position: absolute;
+              top: 0;
+              width: 25%;
+              height: 100%;
+
+              line-height: 0;
+              white-space: nowrap;
+
+              //background: rgba(45, 237, 217, .1);
+              //border: 1px solid rgba(45, 237, 217, .3);
+
+              @include border-radius(.5em);
+
+              &.p1{
+                left: 2%;
+              }
+
+              &.p2{
+                right: 2%;
+                text-align: right;
+              }
+
+              > div{
+                position: relative !important;
+                display: inline-block;
+
+                margin: 0 -.1em;
+
+                min-height: .7em;
+                min-width: .7em;
+                height: 100%;
+
+                > img{
+                  display: block;
+                  max-height: 100%;
+                  max-width: 100%;
+                  height: auto;
+                  width: auto;
+                }
+              }
+            }
+          }
+        }
+
+        .botm{
+          bottom: 2.9%;
+          top: auto;
+
+          .p1,.p2{
+            @include border-radius(0em, false, false, false, "!important");
+
+            padding: 0 .35em;
+            border: none;
+            border-left: .4em solid transparent;
+            border-right: .4em solid transparent;
+          }
+        }
+      }
+
+      .pontos{
+        padding: 0 .2em;
+        text-align: center;
+      }
+
+      .pontos{
+        .contador{
+          display: block;
+          text-align: center;
+          height: 100%;
+
+          > div{
+            position: relative !important;
+            display: inline-block;
+
+            margin: 0;
+            padding: .1em;
+
+            min-height: .7em;
+            min-width: .7em;
+            height: 100%;
+
+            cursor: pointer;
+
+            > img{
+              display: block;
+              max-height: 100%;
+              max-width: 100%;
+              height: auto;
+              width: auto;
+            }
+          }
+        }
+
+        &.p1{
+          border-bottom: .3em solid red  !important;
+          border-top: .3em solid red  !important;
+        }
+
+        &.p2{
+          border-bottom: .3em solid #1adf00 !important;
+          border-top: .3em solid #1adf00 !important;
+        }
+      }
     }
   }
 
@@ -684,7 +856,7 @@ body{
           }
 
           .p2{
-            opacity: .5 !important;
+            opacity: .3 !important;
           }
         }
 
@@ -702,7 +874,7 @@ body{
       div.hud{
         .botm{
           .p1{
-            opacity: .5 !important;
+            opacity: .3 !important;
           }
 
           .p2{
